[workspace]
resolver = "2"
members = ["host", "methods"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
risc0-zkvm = { version = "^2.1.0" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"