[package]
name = "zkdiff"
version = "0.1.0"
edition = "2021"
description = "Zero-knowledge file viewer with redaction proofs"
authors = ["Tanya tanyaarora@tutamail.com"]
repository = "https://github.com/tanctl/zkcat"
license = "Apache 2.0"
keywords = ["zero-knowledge", "risc0", "privacy", "cryptography"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "zkdiff"
path = "src/main.rs"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.1.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"
zerocopy = "0.8"