[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "^2.1.0", default-features = false, features = ['std'] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
risc0-build = { version = "^2.1.2" }

[package.metadata.risc0]
methods = ["guest"]
